--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,7 @@
 
             <Button
                 android:id="@+id/browser"
-                android:layout_width="97dp"
+                android:layout_width="111dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Go to Browser" />
@@ -125,10 +125,10 @@
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="wrap_content"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="NotificationApp (task 6.4)" />
 
             <TextView
                 android:id="@+id/textView7"
@@ -144,11 +144,11 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button8"
-                android:layout_width="wrap_content"
+                android:id="@+id/noti"
+                android:layout_width="103dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="Try Notification" />
 
             <Button
                 android:id="@+id/button9"
